--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   <main>
     <div class="column large">
       <div class="article">
-        <div class="title">
-          Mother of Three Buys Steak at Phish Concert. Leaves
-          feeling "funny."
+        <div class="title one">
+          <span>Mother of Three Buys Steak at Phish Concert. Leaves
+          feeling "funny."</span>
         </div>
         <div class="content">
           <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet,
@@ -51,7 +51,7 @@
             know what I know give me a show.
           </p>
         </div>
-        <div class="title">
+        <div class="title two">
           Earth spins Backwards for 2018
         </div>
       </div>
@@ -64,7 +64,7 @@
             So with that being said. Lets just stay away from that food.
           </p>
         </div>
-        <div class="title">
+        <div class="title three">
           Research Shows cameras Erase Memory
         </div>
       </div>
@@ -86,8 +86,8 @@
         </div>
       </div>
       <div class="article">
-          <div class="title">
-            Cats in Control is it a Thing?
+          <div class="title five">
+            <span>Cats in Control is it a Thing?</span>
           </div>
           <div class="content">
             <p>
@@ -104,6 +104,16 @@
       </div>
     </div>
     <div class="column small">
+      <img src="./resources/images/img-news-bite.png" alt="Cookie" />
+      <div class="article">
+        <h1>NEWS BITES</h1>
+        <p>
+          Cat emoji goes Viral buy youtube Views Home Business
+          Advertising Lol What the Heck Am I typing right now?
+          It's the Victoria Secret Models man. They are out
+          to get you.
+        </p>
+      </div>
     </div>
   </main>
 </body>
