--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           amet fringilla massa.</p>
         </div>
       </div>
+    <div class="theory">
       <div class="article">
         <div class="content">
           <h1>Orca Spends Vacation at Land World Puget</h1>
@@ -69,6 +70,7 @@
         </div>
       </div>
     </div>
+  </div>
     <!--Column two, Medium -->
     <div class="column medium">
       <div class="article">
