--- a/index.html
+++ b/index.html
@@ -105,18 +105,34 @@
           </div>
       </div>
     </div>
+    <!-- Column three Small -->
     <div class="column small">
       <img src="./resources/images/img-news-bite.png" alt="Cookie" />
-      <div class="article">
-        <h1>NEWS BITES</h1>
-        <p>
-          Cat emoji goes Viral buy youtube Views Home Business
-          Advertising Lol What the Heck Am I typing right now?
-          It's the Victoria Secret Models man. They are out
-          to get you.
-        </p>
+      <div class="article bites">
+        <h3>NEWS BITES</h3>
+          <div>Cat Emoji goes Viral</div>
+          <div>Buy Youtube Views</div>
+          <div>Home Business Advertising</div>
+          <div>Homework Answers for Cheap</div>
+          <div>Horny Milfs Eager to F***</div>
+          <div>Pleasurable Food only a text away</div>
+          <div>Make money in Your Free time</div>
       </div>
     </div>
   </main>
+  <footer>
+    <div class="title">
+      MY Times
+    </div>
+    <div class="nav">
+      <a href="#">World</a>
+      <a href="#">U.S.</a>
+      <a href="#">Tech</a>
+      <a href="#">Science</a>
+    </div>
+    <div class="slogan">
+      &copy; 2016, My Time (A Division of Codecademy Bites)
+    </div>
+  </footer>
 </body>
 </html>
